# talks

./: Dockerfile  README.md  package-lock.json  package.json
src/: project.ts
src/talks/0xA-science-association/2024-11-12/scenes/: 000_intro.tsx  100_who_cares.tsx  200_code.tsx  300_end.tsx  defaults.ts
src/talks/rust-vienna/2023-11-30/code/: Cargo.toml  RESULTS.md
src/talks/rust-vienna/2023-11-30/code/examples/: bad_server.rs  good_server.rs  good_server_blocking.rs  good_server_blocking_task.rs  good_server_mk2.rs  good_server_mk3.rs  sync_work.rs  sync_work_sequential.rs  sync_work_spawn_blocking.rs
src/talks/rust-vienna/2023-11-30/scenes/: 000_intro.tsx  100_core_principles.tsx  100_web_servers.tsx  200_web_servers.tsx  300_end.tsx  defaults.ts
src/talks/rust-vienna/2023-11-30/util/: functions.ts
src/talks/rust-vienna/2024-04-25/scenes/: 000_intro.tsx  100_what_is_pyo3.tsx  110_proc_and_lt.tsx  200_open_source.tsx  300_end.tsx  defaults.ts
src/talks/rust-vienna/2024-06-27/scenes/: 000_intro.tsx  100_what_is_pyo3.tsx  200_architecture.tsx  300_end.tsx  defaults.ts
src/talks/rust-vienna/2024-10-29/scenes/: 000_intro.tsx  100_strings.tsx  300_end.tsx  defaults.ts
src/talks/rust-vienna/2024-12-12/: README.md
src/talks/rust-vienna/2024-12-12/scenes/: 000_intro.tsx  100_using_rules.tsx  200_using_rules_of_intrinsics.tsx  300_using_blanket_impls.tsx  400_references_etc.tsx  defaults.ts
src/talks/rust-vienna/2025-05-27/scenes/: 000_intro.tsx
src/talks/rust-vienna/2025-06-18/scenes/: 000_intro.tsx  100_main.tsx  defaults.ts
