[package]
name = "rust-vienna-2023-11-30-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.29"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["http1", "server", "full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
rand = "0.8.5"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }

